--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>ejemplo de clase</h1>
     <p>otro comentario</p>
     <h2>segundo titulo</h2>
+    <p>segundo comentario</p>
 </body>
 </html>
