--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <h2>segundo titulo</h2>
     <p>tercer comentariogi</p>
     <p>segundo comentario</p>
+    <h2>tercer titulo git stash</h2>
 </body>
 </html>
